# napari-tomocube-data-viewer

./: .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: test_and_deploy.yml
src/napari_tomocube_data_viewer/: __init__.py  _reader.py  napari.yaml
src/napari_tomocube_data_viewer/_tests/: test_reader.py
